[tool.poetry]
name = "xluxzuser"
version = "0.4.7"
description = "Script for generating Telegram Session in telethon or pyrogram"
authors = ["Kimo <79422815+ANL0KE@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Telethon = "^1.14.0"
TgCrypto = "^1.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
